fix header view on mobile

--- a/style.css
+++ b/style.css
@@ -824,6 +824,10 @@ header.slideIn {
     filter: blur(5px);
   }
 
+  .land > h3 {
+    font-size: 9px;
+  }
+
   .mobile-links {
     display: flex;
     align-items: center;
